# 0.3.25

* When the styleMap option is passed as a string, ignore lines beginning with #.

# 0.3.24

* Ignore w:numPr elements without w:numId or w:ilvl children.

# 0.3.23

* Support links and images in footnotes and endnotes.

# 0.3.22

* Add support for underlines in style map.

* Add support for strikethrough.

# 0.3.21

* Add basic support for text boxes. The contents of the text box are treated as
  a separate paragraph that appears after the paragraph containing the text box.

# 0.3.20

* Support styles defined without a name

# 0.3.19

* Add ignoreEmptyParagraphs option, which defaults to true.

# 0.3.18

* Make style names case-insensitive in style mappings. This should make style
  mappings easier to write, especially since Microsoft Word sometimes represents
  style names in the UI differently from in the style definition. For instance,
  the style displayed in Word as "Heading 1" has  a style name of "heading 1".
  This hopefully shouldn't cause an issue for anyone, but if you were relying
  on case-sensitivity, please do get in touch.

# 0.3.17

* Add support for hyperlinks to bookmarks in the same document.

# 0.3.16

* Add basic support for Markdown. Not all features are currently supported.

# 0.3.15

* Add default style mappings for builtin footnote and endnote styles in
  Microsoft Word and LibreOffice.

* Allow style mappings with a zero-element HTML path.

* Emit warnings when image types are unlikely to be supported by web browsers.

* Update jszip to 2.4.0.

# 0.3.14

* Add support for endnotes.

# 0.3.13

* Update license-sniffer to fix license comments in mammoth.browser.js.

# 0.3.12

* Update bluebird dependency to fix operation in web workers.

# 0.3.11

* Add support for superscript and subscript text.

# 0.3.10

* Handle XML files that start with the UTF-8 BOM.

# 0.3.9

* Add support for reading Buffer instances.

# 0.3.8

* Add support for line breaks.

# 0.3.7

* Add optional underline conversion.

# 0.3.6
