@@ -4,6 +4,7 @@ var DocumentConverter = require("./document-to-html").DocumentConverter;
 var readStyle = require("./style-reader").readStyle;
 var readOptions = require("./options-reader").readOptions;
 var unzip = require("./unzip");
+var Result = require("./results").Result;
 
 exports.convertToHtml = convertToHtml;
 exports.convertToMarkdown = convertToMarkdown;
@@ -50,11 +51,24 @@ function convert(input, options) {
 
 function convertDocumentToHtml(documentResult, options) {
     var parsedOptions = Object.create(options);
-    parsedOptions.styleMap = (options.styleMap || []).map(readStyle);
+    var styleMapResult = parseStyleMap(options.styleMap);
+    parsedOptions.styleMap = styleMapResult.value;
     var documentConverter = new DocumentConverter(parsedOptions);
+    
     return documentResult.flatMapThen(function(document) {
-        return documentConverter.convertToHtml(document);
+        return styleMapResult.flatMapThen(function(styleMap) {
+            return documentConverter.convertToHtml(document);
+        });
     });
+}
+
+function parseStyleMap(styleMap) {
+    return Result.combine((styleMap || []).map(readStyle))
+        .map(function(styleMap) {
+            return styleMap.filter(function(styleMapping) {
+                return !!styleMapping;
+            });
+        });
 }
 
 
