@@ -2,6 +2,7 @@ var _ = require("underscore");
 
 
 exports.Result = Result;
+exports.success = success;
 exports.warning = warning;
 
 
@@ -31,6 +32,10 @@ Result.combine = function(results) {
     var messages = combineMessages(results);
     return new Result(values, messages);
 };
+
+function success(value) {
+    return new Result(value, []);
+}
 
 function warning(message) {
     return {
