@@ -4,6 +4,7 @@ var RegexTokeniser = lop.RegexTokeniser;
 
 var documentMatchers = require("./document-matchers");
 var htmlPaths = require("./html-paths");
+var results = require("../lib/results");
 
 exports.readHtmlPath = readHtmlPath;
 exports.readDocumentMatcher = readDocumentMatcher;
@@ -195,18 +196,21 @@ function parseString(rule, string) {
     var tokens = tokenise(string);
     var parser = lop.Parser();
     var parseResult = parser.parseTokens(rule, tokens);
-    if (!parseResult.isSuccess()) {
-        throw new Error("Failed to parse: " + describeFailure(parseResult));
+    if (parseResult.isSuccess()) {
+        return results.success(parseResult.value());
+    } else {
+        return new results.Result(null, [results.warning(describeFailure(string, parseResult))]);
     }
-    return parseResult.value();
 }
 
-function describeFailure(parseResult) {
-    return parseResult.errors().map(describeError).join("\n");
+function describeFailure(input, parseResult) {
+    return "Did not understand this style mapping, so ignored it: " + input + "\n" +
+        parseResult.errors().map(describeError).join("\n");
+}
 
-    function describeError(error) {
-        return error.describe();
-    }
+function describeError(error) {
+    return "Error was at character number " + error.characterNumber() + ": " +
+        "Expected " + error.expected + " but got " + error.actual;
 }
 
 function tokenise(string) {
